fix bullet spacing for phone screens

--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,10 @@ header {
   line-height: 2.5vw;
 }
 
+.interests-content-text ul li span {
+  margin-left: 0.2vw;
+}
+
 .interests-content-imgs {
   display: flex;
   flex-direction: column;
